update(falco-exporter): bump version to 0.7.0
Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -22,7 +22,7 @@ probesPort: 19376
 image:
   registry: docker.io
   repository: falcosecurity/falco-exporter
-  tag: 0.6.0
+  tag: 0.7.0
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -63,7 +63,8 @@ daemonset:
   annotations: {}
   podLabels: {}
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
