--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -117,9 +117,8 @@ ebpf:
 
 leastPrivileged:
   # Constrain Falco with capabilities instead of running a privileged container.
-  # When used in conjunction with the eBPF driver, a kernel >= 5.8 is required.
-  # Loading the kernel module driver does NOT work with leastPrivileged.enabled.
-  # Ensure the module is already loaded, or the eBPF driver is enabled.
+  # This option is only supported with the eBPF driver and a kernel >= 5.8.
+  # Ensure the eBPF driver is enabled (i.e., setting the `ebpf.enabled` option to true).
   enabled: false
 
 auditLog:
