Update service UI info values and variables in README.md
Signed-off-by: igoritos22 <igoritos_22@hotmail.com>

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -387,10 +387,12 @@ webui:
   podAnnotations: {}
 
   service:
-    # type: NodePort
+    # type: LoadBalancer
     type: ClusterIP
     port: 2802
     nodePort: 30282
+    annotations: {}
+      # service.beta.kubernetes.io/aws-load-balancer-internal: "true"    
 
   ingress:
     enabled: false
