--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -387,10 +387,11 @@ webui:
   podAnnotations: {}
 
   service:
-    # type: NodePort
+    # type: LoadBalancer
     type: ClusterIP
     port: 2802
     nodePort: 30282
+    targetPort: 2802
     annotations: {}
       # service.beta.kubernetes.io/aws-load-balancer-internal: "true"    
 
