--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -351,7 +351,9 @@ falco:
 
   httpOutput:
     enabled: false
-    url: http://some.url
+    # When set, this will override an auto-generated URL which matches the falcosidekick Service.
+    # When including Falco inside a parent helm chart, you must set this since the auto-generated URL won't match (#280).
+    url: ""
     userAgent: "falcosecurity/falco"
 
   # Falco supports running a gRPC server with two main binding types
