fix(falco): make crio option work with `--reuse-values`
This tentatively addresses the problem reported in this comment: https://github.com/falcosecurity/charts/pull/322#issuecomment-1110007040

Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/falco/templates/daemonset.yaml
+++ b/falco/templates/daemonset.yaml
@@ -70,11 +70,11 @@ spec:
             {{- end }}
           args:
             - /usr/bin/falco
-            {{- if .Values.containerd.enabled }}
+            {{- if and .Values.containerd .Values.containerd.enabled }}
             - --cri
             - /run/containerd/containerd.sock
             {{- end }}
-            {{- if .Values.crio.enabled }}
+            {{- if and .Values.crio .Values.crio.enabled }}
             - --cri
             - /run/crio/crio.sock
             {{- end }}
