adds policyreport adapter helm config for falcosidekick
Signed-off-by: Mritunjay Sharma <mritunjaysharma394@gmail.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -262,6 +262,13 @@ data:
   KAFKAREST_MUTUALTLS : "{{ .Values.config.kafkarest.mutualtls | printf "%t" | b64enc}}"
   KAFKAREST_CHECKCERT : "{{ .Values.config.kafkarest.checkcert | printf "%t" | b64enc}}"
 
+  # PolicyReport Ouptut
+  POLICYREPORT_ENABLED: "{{ .Values.config.policyreport.enabled | toString | b64enc}}"
+  POLICYREPORT_KUBECONFIG: "{{ .Values.config.policyreport.kubeconfig | b64enc}}"
+  POLICYREPORT_MINIMUMPRIORITY: "{{ .Values.config.policyreport.minimumpriority | b64enc}}"
+  POLICYREPORT_MAXEVENTS: "{{ .Values.config.policyreport.maxevents | toString |b64enc}}"
+  POLICYREPORT_PRUNEBYPRIORITY: "{{ .Values.config.policyreport.prunebypriority | toString | b64enc}}"
+
   # WebUI Output
   {{- if .Values.webui.enabled -}}
   {{ $weburl := printf "http://%s-ui:2802" (include "falcosidekick.fullname" .) }}
