--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 2
 image:
   registry: docker.io
   repository: falcosecurity/falcosidekick
-  tag: 2.24.0
+  tag: 2.25.0
   pullPolicy: IfNotPresent
 
 podSecurityContext:
@@ -302,6 +302,14 @@ config:
     minimumpriority: ""  # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
     mutualtls: false  # if true, checkcert flag will be ignored (server cert will always be checked)
     checkcert: true  # check if ssl certificate of the output is valid (default: true)
+
+  policyreport:
+    enabled: false  # if true; policyreport output is enabled
+    kubeconfig: "~/.kube/config"  # Kubeconfig file to use (only if falcosidekick is running outside the cluster)
+    minimumpriority: "debug"  # events with a priority above this are mapped to fail in PolicyReport Summary and lower that those are mapped to warn (default="")
+    maxevents: 1000  # the max number of events that can be in a policyreport (default: 1000)
+    prunebypriority: false  # if true; the events with lowest severity are pruned first, in FIFO order (default: false)
+
 
 service:
   type: ClusterIP
