prepare chart for v2.25.0 of Falcosidekick and v2.0.0 of Falcosidekick-UI
Signed-off-by: Issif <issif_github@gadz.org>
Signed-off-by: Mritunjay Sharma <mritunjaysharma394@gmail.com>

--- a/falcosidekick/templates/deployment.yaml
+++ b/falcosidekick/templates/deployment.yaml
@@ -23,6 +23,9 @@ spec:
         {{- if and .Values.config.azure.podIdentityClientID .Values.config.azure.podIdentityName }}
         aadpodidbinding: {{ include "falcosidekick.fullname" . }}
         {{- end }}
+      {{- if .Values.podLabels }}
+{{ toYaml .Values.podLabels | indent 8 }}
+      {{- end }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/secrets.yaml") . | sha256sum }}
       {{- if .Values.podAnnotations }}
