--- a/falcosidekick/templates/service-ui.yaml
+++ b/falcosidekick/templates/service-ui.yaml
@@ -27,4 +27,29 @@ spec:
   selector:
     app.kubernetes.io/name: {{ include "falcosidekick.name" . }}-ui
     app.kubernetes.io/instance: {{ .Release.Name }}-ui
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "falcosidekick.fullname" . }}-ui-redis
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}-ui-redis
+    helm.sh/chart: {{ include "falcosidekick.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}-ui
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+  {{- with .Values.webui.redis.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+spec:
+  type: ClusterIP
+  ports:
+    - port: {{ .Values.webui.redis.service.port }}
+      targetPort: {{ .Values.webui.redis.service.targetPort }}
+      protocol: TCP
+      name: redis
+  selector:
+    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}-ui-redis
+    app.kubernetes.io/instance: {{ .Release.Name }}-ui-redis
 {{- end }}
